<resources>
    <string name="app_name">CoffeShop</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_view_hint"><![CDATA[<font color=#9aa7a8>Search coffee</font>]]></string>
    <string name="go_to_login_text"><![CDATA[<font color=#f9f9f9>You have an account ? </font><font color=#FFC49E>Sign in</font>]]></string>
    <string name="go_to_register_text"><![CDATA[<font color=#f9f9f9>Create an account ? </font><font color=#FFC49E>Sign up</font>]]></string>
    <string name="go_to_forgot_password_text">Forgot Password ?</string>
    <string name="send_text">Send</string>
    <string name="check_message">Please check your email, we will send the reset password link. If it is not show, check spam messages box</string>
    <string name="enter_email_address_text">Enter email address</string>
    <string name="enter_password_text">Enter password</string>
    <string name="enter_username_text">Enter username</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="location_text">Location</string>
    <string name="add_to_cart_text">Add to cart</string>
    <string name="empty_text">  Empty...</string>
    <string name="favourites_text">Favourites</string>
    <string name="orders_text">Orders</string>
    <string name="cappuccino_text">Cappuccino</string>
    <string name="notifications_text">Notifications</string>
    <string name="settings_text">Settings</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_out_text">Sign out</string>
    <string name="cart_text">Cart</string>
    <string name="notification_text">Notification</string>
    <string name="saved_text">Saved</string>
    <string name="home_text">Home</string>
    <string name="confirm_payment_text">Confirm payment</string>
    <string name="payment_method_text">Payment method</string>
    <string name="visa_text">Visa</string>
    <string name="paypal_text">Paypal</string>
    <string name="continue_text">Continue</string>
    <string name="expiry_date_text">Expiry date</string>
    <string name="cvv_text">CVV</string>
    <string name="card_number_text">Card number</string>
    <string name="enter_card_number_text">enter card number</string>
    <string name="name_text">Name</string>
    <string name="enter_name_on_the_card_text">Enter name on the card</string>


</resources>