<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/extra_light_brown"
    tools:context=".ui.view.homescreen.PaymentDetailsFragment">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/return_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number_text"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />


    <ImageView
        android:id="@+id/paymentMethodImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/mastercard"
        app:layout_constraintBottom_toBottomOf="@+id/cardNumberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardNumberText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/cardNumberText"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input_panel_background_2"
        android:elevation="5dp"
        android:gravity="center"
        android:hint="@string/enter_card_number_text"
        android:inputType="number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/paymentMethodImage"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCardNumber" />

    <TextView
        android:id="@+id/titleDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentMethodImage"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberText" />

    <TextView
        android:id="@+id/titleCVVText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/titleDateText"
        app:layout_constraintTop_toTopOf="@+id/titleDateText" />

    <EditText
        android:id="@+id/cardDateText"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:hint="28/05"
        android:inputType="date"
        android:gravity="center"
        android:background="@drawable/custom_input_panel_background_2"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDateText" />

    <EditText
        android:id="@+id/cardCVVText"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="111"
        android:inputType="number"
        android:gravity="center"
        android:background="@drawable/custom_input_panel_background_2"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/cardDateText"
        app:layout_constraintTop_toBottomOf="@+id/titleCVVText" />


    <TextView
        android:id="@+id/titleUserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentMethodImage"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDateText" />

    <EditText
        android:id="@+id/cardNameText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/custom_input_panel_background_2"
        android:elevation="5dp"
        android:paddingStart="20dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_name_on_the_card_text"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUserNameText" />

</androidx.constraintlayout.widget.ConstraintLayout>