<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.view.register.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/registerCoffeeAnimation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/filled_coffee_animation" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_card_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerCoffeeAnimation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <EditText
            android:id="@+id/usernameTextInputRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_panel_background"
            android:hint="@string/enter_username_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayoutRegister">

        <EditText
            android:id="@+id/emailTextInputRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_panel_background"
            android:hint="@string/enter_email_address_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayoutRegister">

        <EditText
            android:id="@+id/passwordTextInputRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_panel_background"
            android:hint="@string/enter_password_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/passwordVisibile"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/visibility_icon"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintBottom_toBottomOf="@id/passwordTextInputLayoutRegister"
        />

    <ImageView
        android:id="@+id/passwordVisibileOff"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/visibility_off_icon"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintBottom_toBottomOf="@id/passwordTextInputLayoutRegister"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/custom_button_background"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayoutRegister"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayoutRegister"
        />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_login_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>